# DeepProve

./: Cargo.toml  LAYERED_PROVING_FINAL.md  clippy.toml  devenv.nix  rust-toolchain.toml  typos.toml
.github/: actionlint.yml
.github/workflows/: docker.yml  layers-quant.yml  main-bench.yml  mdbook.yml  pr-bench.yml  pr-lint.yml  tests.yml  zkml-mdbook.yml
deep-prove/: Cargo.toml
deep-prove/src/: lib.rs  store.rs
deep-prove/src/middleware/: mod.rs  v1.rs  v2.rs
docker/: deep-prove-aws-client.dockerfile  deep-prove-aws-worker.dockerfile  deep-prove-worker.dockerfile
ff_ext/src/: lib.rs  poseidon.rs
mpcs/src/: lib.rs
mpcs/src/basefold/: structure.rs
multilinear_extensions/src/: mle.rs  util.rs
scripts/ci/: cmp-layers-quant.sh
utils/: Cargo.toml
utils/src/: lib.rs
zkml/: Cargo.toml  bench.py
zkml/assets/scripts/CNN/: input.json.zst
zkml/assets/scripts/MLP/: input.json.zst  mlp.py
zkml/assets/scripts/covid/: input.json.zst
zkml/benches/: prove-model.rs
zkml/docs/src/: LLMs.md  SUMMARY.md  relu.md  softmax.md
zkml/docs/src/llms-layers/: embeddings.md  layernorm.md  mha.md  positionals.md  qkv.md
zkml/proofs/: layer-1759915044275-000011-activation.rmp  layer-1759915044276-000001-requant.rmp  layer-1759915044277-000010-dense.rmp  layer-1759915044278-000006-activation.rmp  layer-1759915044279-000000-requant.rmp  layer-1759915044280-000004-dense.rmp  layer-1759915044309-000011-activation.rmp  layer-1759915044310-000001-requant.rmp  layer-1759915044310-000010-dense.rmp  layer-1759915044311-000006-activation.rmp  layer-1759915044313-000000-requant.rmp  layer-1759915044314-000004-dense.rmp  layer-1759915044342-000011-activation.rmp  layer-1759915044343-000001-requant.rmp  layer-1759915044344-000010-dense.rmp  layer-1759915044345-000006-activation.rmp  layer-1759915044346-000000-requant.rmp  layer-1759915044347-000004-dense.rmp  layer-1759915044379-000011-activation.rmp  layer-1759915044380-000001-requant.rmp  layer-1759915044381-000010-dense.rmp  layer-1759915044382-000006-activation.rmp  layer-1759915044383-000000-requant.rmp  layer-1759915044384-000004-dense.rmp  layer-1759915044416-000001-requant.rmp  layer-1759915044416-000011-activation.rmp  layer-1759915044417-000010-dense.rmp  layer-1759915044418-000006-activation.rmp  layer-1759915044420-000000-requant.rmp  layer-1759915044421-000004-dense.rmp  layer-1759915044450-000011-activation.rmp  layer-1759915044451-000001-requant.rmp  layer-1759915044452-000010-dense.rmp  layer-1759915044453-000006-activation.rmp  layer-1759915044455-000000-requant.rmp  layer-1759915044456-000004-dense.rmp  layer-1759915044482-000011-activation.rmp  layer-1759915044483-000001-requant.rmp  layer-1759915044483-000010-dense.rmp  layer-1759915044484-000006-activation.rmp  (+4257 more)
zkml/src/: inputs.rs  lib.rs  padding.rs  tensor.rs  testing.rs
zkml/src/commit/: context.rs  same_poly.rs
zkml/src/iop/: context.rs  mod.rs  prover.rs  verifier.rs
zkml/src/layers/: activation.rs  add.rs  concat_matmul.rs  convolution.rs  dense.rs  flatten.rs  matrix_mul.rs  mod.rs  pooling.rs  requant.rs  reshape.rs
zkml/src/layers/provable/: mod.rs
zkml/src/layers/transformer/: embeddings.rs  layernorm.rs  logits.rs  mha.rs  mod.rs  positional.rs  qkv.rs  softmax.rs
zkml/src/lookup/: context.rs  witness.rs
zkml/src/lookup/logup_gkr/: circuit.rs  mod.rs
zkml/src/model/: iterator.rs  llm.rs  mod.rs  trace.rs
zkml/src/parser/: gguf.rs  json.rs  llm.rs  mod.rs  onnx.rs
zkml/src/quantization/: mod.rs  strategy.rs
