[package]
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "deep-prove"
description = "Client stack for the ZKML library"
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]

[features]
blake = ["mpcs/blake"]
default = []
# Enable worker's AWS marketplace billing
aws-marketplace = ["dep:aws-config", "dep:aws-sdk-marketplacemetering"]

[[bin]]
name = "deep-prove-worker"
path = "src/bin/worker/main.rs"

[[bin]]
name = "deep-prove-cli"
path = "src/bin/cli/main.rs"

[dependencies]
alloy = { version = "1.0.22", default-features = false }
anyhow.workspace = true
axum = { workspace = true, features = ["http1", "json"] }
aws-config = { workspace = true, optional = true }
aws-sdk-marketplacemetering = { workspace = true, optional = true }
base64 = "0.22.1"
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true, features = ["from"] }
exponential-backoff = "2.1.0"
ff_ext = { version = "0.1.0", path = "../ff_ext" }
futures = { version = "0.3.30" }
grpc-worker = { git = "https://github.com/Lagrange-Labs/grpc-worker-rs", branch = "main" }
humansize = "2.1.3"
machine-uid = "0.5.3"
memmap2.workspace = true
mpcs.workspace = true
object_store.workspace = true
prost = { version = "0.13.3" }
prost-tract-compat = { package = "prost", version = "0.11.9" }
prost-types = { version = "0.13.3" }
prost-wkt-types = { version = "0.6.0" }
rmp-serde = { workspace = true }
rustls = { version = "0.23.16", features = ["ring"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
tempfile.workspace = true
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = { version = "0.1.17" }
tonic = { version = "0.12.3", features = [
  "transport",
  "tls",
  "tls-roots",
  "tls-webpki-roots",
  "gzip",
] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "json",
] }
tract-onnx = { workspace = true }
ureq = { version = "3.0.12", features = ["default", "json"] }
url = "2.5.4"
uuid = "1.17.0"
zkml = { path = "../zkml" }
zstd = "0.13.3"

[build-dependencies]
# worker-related dependencies
miette = { version = "7.2", features = ["fancy"] }
protox = { version = "0.7.1" }
tonic-build = { version = "0.12.3" }
