[package]
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "zkml"
description = "ZKML library"
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[features]
blake = ["mpcs/blake"]
default = []
# Capture layers' quatization outputs for regression tests
capture-layers-quant = ["dep:sha2"]
mem-track = ["utils/mem-track"]

[dependencies]
anyhow.workspace = true
ark-std.workspace = true
burn = { version = "0.17.0", features = ["ndarray"] }
candle-core = "0.9.1"
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true, features = ["full"] }
ff_ext = { version = "0.1.0", path = "../ff_ext" }
gguf-rs = "0.1.4"
gkr = { workspace = true }
hex = { workspace = true }
itertools.workspace = true
mpcs = { workspace = true }
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions", features = [
    "parallel",
] }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
poseidon = { version = "0.1.0", path = "../poseidon" }
prost = { version = "0.13.3" }
prost-tract-compat = { package = "prost", version = "0.11.9" }
rayon.workspace = true
rmp-serde = { workspace = true }
rust_tokenizers = "8.1.1"
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.10.9", optional = true }
statrs = { workspace = true }
sumcheck = { version = "0.1.0", path = "../sumcheck" }
timed = { workspace = true }
timed-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
] }
tract-onnx = { workspace = true }
transcript = { version = "0.1.0", path = "../transcript" }
utils = { path = "../utils" }


[dev-dependencies]
criterion = { "version" = "0.6", features = ["html_reports"] }
ndarray = "0.16.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
rstest = "0.25.0"
sha2 = "0.10.9"
tempfile.workspace = true
zstd = "0.13.3"

[[bench]]
harness = false
name = "prove-model"

[lints.clippy]
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
